--- a/package.json
+++ b/package.json
@@ -17,51 +17,56 @@
   "license": "MIT",
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular/animations": "^8.0.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/elements": "^8.2.14",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "@angular/upgrade": "^8.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@angular/animations": "^9.1.11",
+    "@angular/common": "^9.1.11",
+    "@angular/compiler": "^9.1.11",
+    "@angular/core": "^9.1.11",
+    "@angular/elements": "^9.1.11",
+    "@angular/forms": "^9.1.11",
+    "@angular/localize": "^9.1.11",
+    "@angular/platform-browser": "^9.1.11",
+    "@angular/platform-browser-dynamic": "^9.1.11",
+    "@angular/router": "^9.1.11",
+    "@angular/upgrade": "^9.1.11",
+    "@enexus/payment-card": "^1.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@webcomponents/custom-elements": "^1.3.1",
-    "angular-in-memory-web-api": "^0.9.0",
+    "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.4.1",
     "concat": "^1.0.3",
-    "core-js": "^2.5.4",
+    "core-js": "^3.6.5",
     "document-register-element": "^1.8.1",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^9.0.1",
+    "i": "^0.3.6",
     "mutation-observer": "^1.0.3",
+    "npm": "^6.14.5",
     "rxjs": "^6.5.1",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.800.0",
-    "@angular/cli": "^8.0.0",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/platform-server": "^8.0.0",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "~0.901.8",
+    "@angular/cli": "^9.1.8",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/platform-server": "^9.1.11",
+    "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "^2.0.4",
-    "@types/node": "~8.9.4",
-    "gulp": "^3.9.1",
+    "@types/node": "^12.11.1",
+    "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^2.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "lodash": "^4.16.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "protractor": "~7.0.0",
+    "ts-node": "~8.10.2",
+    "tslint": "~6.1.2",
+    "typescript": "~3.8.3"
   },
   "repository": {}
 }
