--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "@agm/core": "^1.1.0",
     "@angular/animations": "^9.1.11",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "^9.1.11",
     "@angular/compiler": "^9.1.11",
     "@angular/core": "^9.1.11",
     "@angular/elements": "^9.1.11",
     "@angular/forms": "^9.1.11",
     "@angular/localize": "^9.1.11",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^9.1.11",
     "@angular/platform-browser-dynamic": "^9.1.11",
     "@angular/router": "^9.1.11",
