--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "build": "ng build --prod --output-hashing=none",
     "e2e": "ng e2e",
-    "b": "npm run build && gulp",
+    "b": "npm run build",
+    "gulp": "gulp",
     "ng": "ng"
   },
   "keywords": [],
@@ -54,7 +55,7 @@
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "^2.0.4",
     "@types/node": "^12.11.1",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^2.0.0",
     "jasmine-core": "~3.5.0",
