--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/compiler": "^9.1.11",
     "@angular/core": "^9.1.11",
     "@angular/elements": "^9.1.11",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "^9.1.11",
     "@angular/localize": "^9.1.11",
     "@angular/material": "^9.2.4",
@@ -32,6 +33,9 @@
     "@angular/router": "^9.1.11",
     "@angular/upgrade": "^9.1.11",
     "@enexus/flipper-components": "^1.0.5",
+    "@enexus/flipper-dialog": "^1.0.2",
+    "@enexus/flipper-font": "^1.0.2",
+    "@enexus/flipper-vendors": "^1.1.0",
     "@enexus/payment-card": "^1.0.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@webcomponents/custom-elements": "^1.3.1",
