--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "@webcomponents/custom-elements": "^1.3.1",
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.4.1",
+    "card": "^2.5.0",
     "concat": "^1.0.3",
     "core-js": "^3.6.5",
     "document-register-element": "^1.8.1",
     "fs-extra": "^9.0.1",
     "i": "^0.3.6",
+    "jquery": "^3.5.1",
     "mutation-observer": "^1.0.3",
     "npm": "^6.14.5",
     "rxjs": "^6.5.1",
@@ -59,8 +61,9 @@
     "@angular/platform-server": "^9.1.11",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "^2.0.4",
-    "@types/node": "^12.11.1",
-    "gulp": "^3.9.1",
+    "@types/jquery": "^3.5.4",
+    "@types/node": "^12.19.3",
+    "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^2.0.0",
     "jasmine-core": "~3.5.0",
